--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "https://support-desk-api.onrender.com",
+  "proxy": "https://support-desk-api-ftsh.onrender.com",
   "private": true,
   "dependencies": {
     "@fvilers/disable-react-devtools": "^1.3.0",
